intel/bench_214_new/extr_.linuxdriversmediav4l2-corev4l2-ctrls.c_v4l2_ctrl_get_name_with_main/log.txt
bench_214_new/extr_.linuxdriversmediav4l2-corev4l2-ctrls.c_v4l2_ctrl_get_name_with_main/extr_.linuxdriversmediav4l2-corev4l2-ctrls.c_v4l2_ctrl_get_name_with_main.c:712:10: error: use of undeclared identifier 'NULL'
                return NULL;
                       ^
1 error generated.
HLS FPGA Parse FAILED.
